--- a/client/src/style.scss
+++ b/client/src/style.scss
@@ -253,8 +253,8 @@ $Color : #3B3C3D;
                     display: flex;
                     justify-content: center;
                     align-items: center;
-                    
-                    height: 25%;
+                    max-width: 200px;
+                    max-height: 200px;
                     object-fit: cover;
                 }
                 .user{
